Adds terminal toggle option

--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
           </div>
         </div>
         <div class="bio">
+          <div class="Text" style="display: none">
+            <h3>Hello!</h3>
+            <p>
+              My name is Michal Kudlacz and I am an experienced IT professional
+              with a strong background in managing and developing CCTV and Linux
+              systems.
+            </p>
+            <p>
+              In my current role (as of April 2023), I have deployed over 1000
+              Linux machines running Ubuntu, Mint and XCP-NG. They are
+              respectively being used on servers, client boxes and for
+              Virtualisation - alongside with XenOrchestra. I have also been
+              working with a variety of technologies, including PHP, MySQL,
+              PostgreSQL, Ansible and Zabbix.
+            </p>
+            <p>
+              I demonstrate very strong troubleshooting skills as well as the
+              ability to help non-technical people with more complex issues.
+            </p>
+            <div class="button-wrapper"><button class="button-terminal" role="button"><i class="fa-solid fa-terminal"></i>&nbsp;Open terminal</button></div>
+            <!-- <a href="#" onclick="toggleTerminal();">Open terminal</a> -->
+          </div>
           <div class="Terminal">
             <div class="Terminal__Toolbar">
               <div class="Toolbar__buttons">
@@ -46,7 +68,9 @@
             <div class="Terminal__body">
               <div class="Terminal__text">
                 Welcome to my portfolio!
-                <a href="http://kudlacz.it">kudlacz.it</a>
+                <a href="http://kudlacz.it">kudlacz.it</a><br />
+                Click on the X icon in the top left corner of the terminal window to toggle the text.
+
                 <div class="Terminal__Prompt">
                   <span class="Prompt__user">michal@kudlacz.it:</span
                   ><span class="Prompt__location">~</span
