--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               In my current role (as of September 2023), I have deployed over 1000
               Linux machines running Ubuntu, Mint and XCP-NG. They are
               respectively being used on servers, client boxes and for
-              Virtualisation - alongside with XenOrchestra. I have also been
+              Virtualisation - alongside with XenOrchestra and Proxmox. I have also been
               working with a variety of technologies, including PHP, MySQL,
               PostgreSQL, Ansible and Zabbix.
             </p>
